# reomte_control

catkin_ws/: CMakeLists.txt  run_task.bash  set_up.bash
catkin_ws/config/controller/: device_info.json
catkin_ws/lib/: libSimpleAmqpClient.so.7.0.1
catkin_ws/src/controller/: CMakeLists.txt  package.xml
catkin_ws/src/controller/include/: RemoteController.hpp
catkin_ws/src/controller/include/remote_control/: iothub_connection.h
catkin_ws/src/controller/src/: controller_publisher.cpp  controller_subscriber.cpp  g29_data_read.cpp  iot_hub_platform.cpp  test.cpp  test_controller.cpp
catkin_ws/src/msgs/: CMakeLists.txt
catkin_ws/src/msgs/msg/: controller.msg
catkin_ws/src/rabbitmq_test/: CMakeLists.txt  package.xml
catkin_ws/src/rabbitmq_test/src/: task.cpp  test.cpp  worker.cpp
catkin_ws/utils/: CMakeLists.txt
catkin_ws/utils/SimpleAmqpClient-master/: CMakeLists.txt
catkin_ws/utils/SimpleAmqpClient-master/src/SimpleAmqpClient/: ChannelImpl.h
catkin_ws/utils/jsoncpp/: CMakeLists.txt
catkin_ws/utils/jsoncpp/include/: CMakeLists.txt
catkin_ws/utils/jsoncpp/src/lib_json/: CMakeLists.txt
catkin_ws/utils/qcloud-iot-sdk-embedded-c-3.2.3/: CMakeLists.txt  Makefile
